exports[`Dialog should render 1`] = `
<div
  bsSize={null}
  className="Modal"
  show={true}>
  <div
    className="Body">
    <div>
      BODY
    </div>
  </div>
</div>
`;

exports[`Dialog should render action 1`] = `
<div
  bsSize={null}
  className="Modal"
  show={true}>
  <div
    className="Header"
    closeButton={true}>
    <div
      className="Title">
      Hello world
    </div>
  </div>
  <div
    className="Body">
    <div>
      BODY
    </div>
  </div>
  <div
    className="Footer">
    <button
      bsStyle="default"
      onClick={[Function]}
      role={null}>
      <span>
        OK
      </span>
    </button>
  </div>
</div>
`;

exports[`Dialog should render header 1`] = `
<div
  bsSize={null}
  className="Modal"
  show={true}>
  <div
    className="Header"
    closeButton={true}>
    <div
      className="Title">
      Hello world
    </div>
  </div>
  <div
    className="Body">
    <div>
      BODY
    </div>
  </div>
</div>
`;

exports[`Dialog should render large 1`] = `
<div
  bsSize="large"
  className="Modal"
  show={true}>
  <div
    className="Header"
    closeButton={true}>
    <div
      className="Title">
      Hello world
    </div>
  </div>
  <div
    className="Body">
    <div>
      BODY
    </div>
  </div>
  <div
    className="Footer">
    <button
      bsStyle="default"
      onClick={[Function]}
      role={null}>
      <span>
        OK
      </span>
    </button>
  </div>
</div>
`;

exports[`Dialog should render small 1`] = `
<div
  bsSize="small"
  className="Modal"
  show={true}>
  <div
    className="Header"
    closeButton={true}>
    <div
      className="Title">
      Hello world
    </div>
  </div>
  <div
    className="Body">
    <div>
      BODY
    </div>
  </div>
  <div
    className="Footer">
    <button
      bsStyle="default"
      onClick={[Function]}
      role={null}>
      <span>
        OK
      </span>
    </button>
  </div>
</div>
`;
